--- a/scss/mdb-lite-free.scss
+++ b/scss/mdb-lite-free.scss
@@ -1,7 +1,7 @@
 // Bootstrap
 @import "core/bootstrap/functions";
 @import "core/bootstrap/variables";
-
+@import "core/bootstrap/variables";
 // CORE
 @import "core/mixins";
 // Your custom variables
